--- a/index.css
+++ b/index.css
@@ -20,6 +20,20 @@ nav {
     width: 40%;
 }
 
+a:link, a:visited {
+    background-color: white;
+    color: black;
+    border: 2px solid green;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+  
+ a:hover, a:active {
+    background-color: green;
+    color: white;
+}
 .logo img {
     height: 100px;
     width: 100px;
